Fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body{
 
 h1{
     margin: 2rem;
+    color: blue;
 }
 
 .board{
@@ -51,6 +52,7 @@ h1{
 }
 h3{
     padding: 1rem;
+    color: green;
 }
 li{
     list-style: none;
